[ui] fix datepicker z-index

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -148,6 +148,10 @@ textarea.form-control {
 	z-index: 100 !important;
 }
 
+.ui-datepicker {
+	z-index: 100 !important;
+}
+
 .ui-datepicker .ui-datepicker-header {
 	border-radius: 0px !important;
 }
